RESOLVED FIXED40030
[chromium] Layer compositor fails on ASSERT when updating layer contents
https://bugs.webkit.org/show_bug.cgi?id=40030
Summary [chromium] Layer compositor fails on ASSERT when updating layer contents
Vangelis Kokkevis
Reported 2010-06-01 17:37:46 PDT
This happens infrequently but when the dirtyRect of a composited layer contains portions that fall outside the layer's bounds, the code that updates the contents of the layer's texture (LayerChromium::updateTextureContents()) hits an assert. The solution is to clip the dirty region to the bounds of the layer since that's the only visible portion anyway.
Attachments
Proposed patch (2.17 KB, patch)
2010-06-01 18:12 PDT, Vangelis Kokkevis
no flags
Vangelis Kokkevis
Comment 1 2010-06-01 18:12:43 PDT
Created attachment 57610 [details] Proposed patch
Dimitri Glazkov (Google)
Comment 2 2010-06-01 19:05:14 PDT
Comment on attachment 57610 [details] Proposed patch sounds good.
WebKit Commit Bot
Comment 3 2010-06-02 02:01:59 PDT
Comment on attachment 57610 [details] Proposed patch Clearing flags on attachment: 57610 Committed r60548: <http://trac.webkit.org/changeset/60548>
WebKit Commit Bot
Comment 4 2010-06-02 02:02:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.