2010-06-02  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Dimitri Glazkov.

        [Chromium] Clamp dirtyRect updates of composited layer contents to the size
        of the layer to avoid writing outside texture bounds.
        https://bugs.webkit.org/show_bug.cgi?id=40030

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::updateTextureContents):

Canonical link: https://commits.webkit.org/51581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60548 268f45cc-cd09-0410-ab3c-d52691b4dbfc